<resources>
    <string name="app_name">My_Shopping</string>
    <string name="total_itens">Total Items</string>
    <string name="total_de_itens">Total Items</string>
    <string name="place_order">Place Order</string>
    <string name="create_an_account">Create an Account</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile_picture">Profile picture</string>
    <string name="about_this_app">About this App</string>
    <string name="user_profile">User Profile</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="category_title">Category</string>
    <string name="user_icon">User Icon</string>
    <string name="sign_in_button">Sign In Button</string>
    <string name="image_sign_up">Image Sign Up</string>
    <string name="your_orders">Your Orders</string>
    <string name="enter_order_number">Enter Order Number</string>
    <string name="find">Find</string>
    <string name="product_photo">Product Photo</string>
    <string name="product_title">Product Title</string>
    <string name="_19_80">19 80</string>
    <string name="add_to_cart">add to cart</string>
    <string name="remove">Remove</string>
    <string name="buttonplus">Button plus</string>
    <string name="buttonminus">buttonMinus</string>
    <string name="count_text">Count text</string>
    <string name="view_profile">view_profile</string>
    <string name="view_cart">view_cart</string>
    <string name="order_summary">order_summary</string>
    <string name="logout">logout</string>
    <string name="which_product_do_you_you_want">Which product</string>
    <string name="which_category_do_you_want">Which category</string>
    <string name="electronics">Electronics</string>
    <string name="men_s">Mens</string>
    <string name="women_s">Womens</string>
    <string name="jewelery">Jewelery</string>
    <string name="product_image">product_image</string>
    <string name="product_name">product_name</string>
    <string name="price">price</string>
    <string name="price_detail">price detail</string>
    <string name="category">category</string>
    <string name="category_detail">category_detail</string>
    <string name="description">Description</string>
</resources>