<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E4DDDD"
    tools:context=".Products">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/item_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/item_bg"
            android:elevation="2dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/product_Image"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/product_photo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_launcher_background"
                app:layout_constraintBottom_toTopOf="@+id/product_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/product_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/product_title"
                android:textAlignment="center"
                android:textColor="@color/material_dynamic_neutral30"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/price"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/product_Image" />

            <TextView
                android:id="@id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textAlignment="center"
                android:text="@string/_19_80"
                android:textColor="#FF5722"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/add_to_cart_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/add_to_cart_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:backgroundTint="#FF5722"
                android:text="@string/add_to_cart"
                android:textColor="@color/material_dynamic_neutral0"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/removeButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/remove"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/minusButton"
                app:layout_constraintTop_toBottomOf="@id/price" />

            <ImageView
                android:id="@+id/plusButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/plus"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/price"
                android:contentDescription="@string/buttonplus" />

            <ImageView
                android:id="@+id/minusButton"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/minus"
                android:visibility="gone"
                app:layout_constraintStart_toEndOf="@+id/countButton"
                app:layout_constraintTop_toBottomOf="@id/price"
                android:contentDescription="@string/buttonminus" />

            <TextView
                android:id="@+id/countButton"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="16dp"
                android:text="@string/count_text"
                android:visibility="gone"
                android:textColor="#000"
                app:layout_constraintStart_toEndOf="@+id/plusButton"
                app:layout_constraintTop_toBottomOf="@id/price" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
