<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E4DDDD"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".SignInActivity">

        <ImageView
            android:layout_width="115dp"
            android:layout_height="115dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@color/material_dynamic_neutral40"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/username"
                android:textColor="#FF5722"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:hint="@string/username"
                android:inputType="text" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="end"
                android:text="@string/password"
                android:textColor="#FF5722"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="username"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/signInButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#FF5722"
            android:text="@string/sign_in_button"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:backgroundTint="#FF5722"
            android:text="@string/create_an_account"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="16sp"
            android:textStyle="bold" />

</LinearLayout>
