<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E4DDDD"
    tools:context=".SignUpActivity">

        <ImageView
            android:id="@+id/signup_image"
            android:layout_width="322dp"
            android:layout_height="227dp"
            android:layout_marginTop="24dp"
            app:layout_constraintBottom_toTopOf="@+id/titleDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/subscribe"
            android:contentDescription="@string/image_sign_up" />

        <TextView
            android:id="@+id/titleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/create_an_account"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signup_image" />

        <EditText
            android:id="@+id/firstNameInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="name first"
            android:background="#F0F3F4"
            android:hint="@string/first_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleDetail" />

        <EditText
            android:id="@+id/lastNameInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="name last"
            android:background="#F0F3F4"
            android:hint="@string/last_name"
            android:inputType="text"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

        <EditText
            android:id="@+id/email"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="your best email"
            android:background="#F0F3F4"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lastNameInput" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="secret password"
            android:background="#F0F3F4"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/confirmPasswordInput"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints="password secret"
            android:background="#F0F3F4"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

        <Button
            android:id="@+id/signUpButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="#FF5722"
            android:text="@string/sign_up"
            android:textColor="@color/material_dynamic_neutral0"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmPasswordInput" />

</androidx.constraintlayout.widget.ConstraintLayout>
