<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4DDDD"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/which_product_do_you_you_want"
        android:textColor="@color/material_dynamic_neutral30"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/product_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/material_dynamic_neutral30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_text" />

    <TextView
        android:id="@+id/category_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/which_category_do_you_want"
        android:textColor="@color/material_dynamic_neutral30"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_list" />

    <LinearLayout
        android:id="@+id/category_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_text">

    <Button
        android:id="@+id/category_electronics"
        android:layout_width="20dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:backgroundTint="#FF5722"
        android:padding="8dp"
        android:text="@string/electronics"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="SmallSp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/category_mens"
        android:layout_width="10dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:backgroundTint="#FF5722"
        android:padding="8dp"
        android:text="@string/men_s"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="SmallSp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/categoryWomens"
        android:layout_width="10dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:backgroundTint="#FF5722"
        android:padding="8dp"
        android:text="@string/women_s"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="DuplicateIds,SmallSp"
        style="?android:attr/buttonBarButtonStyle" />

    <Button
        android:id="@+id/category_womens"
        android:layout_width="10dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:backgroundTint="#FF5722"
        android:padding="8dp"
        android:text="@string/jewelery"
        android:textColor="@color/black"
        android:textSize="10sp"
        android:textStyle="bold"
        tools:ignore="SmallSp"
        style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>




