<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#E4DDDD"
    tools:context=".OrderSummary">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="196dp"
            android:text="@string/your_orders"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/search_order"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="#F0F3F4"
            android:hint="@string/enter_order_number"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:textColor="@color/material_dynamic_neutral30"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:autofillHints="search orders"
            android:inputType="" />

        <Button
            android:id="@+id/btn_search_order"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="#FF5722"
            android:padding="15dp"
            android:text="@string/find"
            android:textColor="@color/material_dynamic_neutral0"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/search_order" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/material_dynamic_neutral30"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search_order" />

</androidx.constraintlayout.widget.ConstraintLayout>
